fix overflow issues in sign components

--- a/src/app/components/sign/sign-in/sign-in.component.scss
+++ b/src/app/components/sign/sign-in/sign-in.component.scss
@@ -1,5 +1,5 @@
 .form-card-1{
-  min-width: 360px;
+  min-width: 300px;
   height: 100%;
   margin: 0;
   border-radius: 0;
