--- a/src/app/components/sign/sign-up/sign-up.component.scss
+++ b/src/app/components/sign/sign-up/sign-up.component.scss
@@ -3,7 +3,7 @@
 }
 
 .form-card-1{
-  min-width: 360px;
+  min-width: 300px;
   height: 100%;
   margin: 0;
   border-radius: 0;
